# spl-core

./: .all-contributorsrc  .copier-answers.yml  .env  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  LICENSE  Pipfile  README.md  Scoopfile.json  bootstrap.json  bootstrap.py  build.bat  build.ps1  commitlint.config.js  dependencies.json  install-mandatory.bat  install-mandatory.list  install-optional.bat  install-optional.list  install.ps1  pyproject.toml  pytest.ini  renovate.json  scoopfile.json  setup.py  spl.bat  spl.ps1  test.bat  test.ps1
.github/workflows/: ci.yml  labels.yml  test.yml
cmake/: common.cmake  conan.cmake  kconfig.cmake  spl.cmake
cmake/test/: spl_unit_test_framework.cmake
cmake/test/common.cmake/: CMakeLists.txt
cmake/test/spl.cmake/: CMakeLists.txt
doc/: build.md  debugging.md  import.md  legacyToConfigurable.md  unitTesting.md
docs/: concepts.rst  conf.py  index.rst  project_info.rst  readme.rst  usage.rst
docs/about/: index.rst
docs/artifacts_architecture/: index.rst
docs/design/: index.rst
docs/features/: index.rst
docs/getting_started/: concepts.rst  from_legacy_to_configurable_component.rst  generate_example_project.rst  glossary.rst  hello_world.rst  index.rst  start_new_component.rst  start_new_variant.rst
docs/internals/: index.rst
docs/internals/_images/: sple.drawio
docs/reference/: index.rst  macros.rst  targets.rst  variables.rst
docs/tutorials/: generate_example_project.rst  hello_world_step_by_step.rst  index.rst
docs/usage/: index.rst  macros.rst  project_structure.rst
legacy/platform_a/: parts.cmake
powershell/: include.ps1  install-scoop.ps1  spl-bootstrap.ps1  spl-functions.ps1  spl-variables.ps1  spl.ps1
powershell/test/: spl-functions.Tests.ps1
python/kconfig/: kconfig.py  test_kconfig.py  utils.py
src/common/: cmake.py
src/creator/: component.py  creator.py  project_artifacts.py  spl_project.py  variant.py  workspace_artifacts.py
src/creator/templates/component/: cookiecutter.json
src/creator/templates/component/{{cookiecutter.name}}/: parts.cmake
src/creator/templates/component/{{cookiecutter.name}}/src/: {{cookiecutter.name}}.c
src/creator/templates/project/: cookiecutter.json
src/creator/templates/project/{{cookiecutter.name}}/: CMakeLists.txt  README.md  build.bat  dependencies.json  install-spl.ps1  pytest.ini
src/creator/templates/project/{{cookiecutter.name}}/test/: test_build.py  test_unittests.py
src/gcov_maid/: gcov_maid.py
src/kconfig/: kconfig.py
src/project_creator/: creator.py  variant.py  workspace_artifacts.py
src/project_creator/templates/project/: cookiecutter.json
src/project_creator/templates/project/{{cookiecutter.name}}/: CMakeLists.txt  KConfig  Pipfile  README.md  build.ps1  conf.py  coverage.rst  index.rst
src/project_creator/templates/project/{{cookiecutter.name}}/doc/: Doxyfile.in  unit_test_results.rst  unit_test_spec.rst
src/project_creator/templates/project/{{cookiecutter.name}}/doc/software_architecture/: index.rst
src/project_creator/templates/project/{{cookiecutter.name}}/doc/software_requirements/: index.rst
src/project_creator/templates/project/{{cookiecutter.name}}/test/: test_build.py  test_unittests.py
src/project_creator/templates/project/{{cookiecutter.name}}/tools/setup/: git-config.ps1
src/project_creator/templates/project/{{cookiecutter.name}}/{% if cookiecutter.touch_components -%} components {%- endif %}/component/: CMakeLists.txt
src/project_creator/templates/variant/{{cookiecutter.flavor}}/{{cookiecutter.subsystem}}/: config.txt  parts.cmake
src/spl_core/common/: cmake.py
src/spl_core/kconfig/: kconfig.py
src/spl_core/project_creator/: creator.py  workspace_artifacts.py
src/spl_core/project_creator/templates/project/{{cookiecutter.name}}/: CMakeLists.txt  KConfig
test/: run_all.py  test_build.py  test_unittests.py
tests/: test_cmake.py  test_creator.py  test_directory_tracker.py  test_documentation.py  test_gcov_maid.py  test_integration.py  test_kconfig.py  test_spl.py  test_variant.py  utils.py
tests/common.cmake/: CMakeLists.txt
tests/common.cmake/component/: CMakeLists.txt
tests/spl.cmake/: CMakeLists.txt
tools/cmake/: build-kit-production.cmake  build-kit-test.cmake  common-functions.cmake  common-macros.cmake
tools/cmake/postprocessing/: deployToArtifactory.py  postprocessing.cmake
(+14 files in other folders)
